apps/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: minio
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - minio.k8s.bumgu.com
        - minio-api.k8s.bumgu.com
      secretName: k8s-bumgu-com-tls
  rules:
    - host: minio.k8s.bumgu.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-minio
                port:
                  number: 9001
    - host: minio-api.k8s.bumgu.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-minio
                port:
                  number: 9000
